BPER/DEVF/force-app/main/default/objects/CRM_Targa__c/CRM_Targa__c.object-meta.xml
<CustomObject>
    <label>Targa</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Targa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targhe</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>