BPER/DEVF/force-app/main/default/objects/CRM_Targa__c/fields/CRM_DataScadenzaPolizza__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataScadenzaPolizza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data scadenza polizza</label>
    <type>Date</type>
</CustomField>