BPER/DEVF/force-app/main/default/objects/CRM_Targa__c/fields/CRM_TargaVeicolo__c.field-meta.xml
<CustomField>
    <fullName>CRM_TargaVeicolo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Targa veicolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>