BPER/DEVF/force-app/main/default/objects/CRM_Targa__c/fields/CRM_TipoVeicolo__c.field-meta.xml
<CustomField>
    <fullName>CRM_TipoVeicolo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo veicolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>