BPER/DEVF/force-app/main/default/objects/CRM_Targa__c/fields/NDW_X_Update_TS__c.field-meta.xml
<CustomField>
    <fullName>NDW_X_Update_TS__c</fullName>
    <defaultValue>DATETIMEVALUE(&quot;1900-01-01 12:00:00&quot;)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>NDW_X_Update_TS</label>
    <type>DateTime</type>
</CustomField>